<resources>
    <string name="app_name">WorkManagerJM</string>
    <string name="text_loading">正在加载中...</string>
    <string name="text_task_id">任务号\u0020:\u0020</string>
    <string name="text_user_number">户名\u0020:\u0020</string>
    <string name="text_xiaogenhao">销根号\u0020:\u0020</string>
    <string name="text_work_id">工单编号\u0020:\u0020</string>
    <string name="text_hot_work_id">热线编号\u0020:\u0020</string>
    <string name="text_address">地址\u0020:\u0020</string>
    <string name="text_happen_address">发生地址\u0020:\u0020</string>
    <string name="text_new_meter_position">新表表位\u0020:\u0020</string>
    <string name="text_meter_position">表位\u0020:\u0020</string>
    <string name="text_new_meter_range">新表量程\u0020:\u0020</string>
    <string name="text_new_meter_producer">新表厂家\u0020:\u0020</string>
    <string name="text_meter_producer">水表厂家\u0020:\u0020</string>
    <string name="text_order_task_type">工单类型\u0020:\u0020</string>
    <string name="text_task_sub_type">子类型\u0020:\u0020</string>
    <string name="text_register_time">派单时间\u0020:\u0020</string>
    <string name="text_apply_date">申请时间\u0020:\u0020</string>
    <string name="text_handler_time_limit">处理时限\u0020:\u0020</string>
    <string name="text_result">处理情况\u0020:\u0020</string>
    <string name="text_response_content">反映内容\u0020:\u0020</string>
    <string name="text_response_type">反映类型\u0020:\u0020</string>
    <string name="text_response_person">反映人\u0020:\u0020</string>
    <string name="text_accept_station">受理站点\u0020:\u0020</string>
    <string name="text_accept_remark">受理备注\u0020:\u0020</string>
    <string name="text_task_status">工单状态\u0020:\u0020</string>
    <string name="text_status">状态\u0020:\u0020</string>
    <string name="text_station">站点\u0020:\u0020</string>
    <string name="text_accept_group">受理班组\u0020:\u0020</string>
    <string name="text_complete_date">完成时间\u0020:\u0020</string>
    <string name="text_reject_date">退单时间\u0020:\u0020</string>
    <string name="text_complete_end_date">截止时间\u0020:\u0020</string>
    <string name="text_back_reason">退单原因\u0020:\u0020</string>
    <string name="text_dispatch_order">派单</string>
    <string name="text_receive_order">接单</string>
    <string name="text_on_spot">到场</string>
    <string name="text_handler">处理</string>
    <string name="text_apply_help">协助</string>
    <string name="text_assist_reason">协助原因</string>
    <string name="text_charge_back">退单</string>
    <string name="text_delay">延期</string>
    <string name="text_hang_up">挂起</string>
    <string name="text_recovery">恢复</string>
    <string name="title_all">全部</string>
    <string name="title_order_bw_list">表务工单</string>
    <string name="title_meter_install_list">报装工单</string>
    <string name="title_call_pay_list">催缴工单</string>
    <string name="title_inside_list">内部工单</string>
    <string name="text_work_list">工单列表</string>
    <string name="text_history_list">历史列表</string>
    <string name="card_name">用户名称\u0020:\u0020</string>
    <string name="detail_address">地址\u0020:\u0020</string>
    <string name="detail_task_original">工单来源\u0020:\u0020</string>
    <string name="detail_prepaid_funds">预交款\u0020:\u0020</string>
    <string name="detail_contact">联系人\u0020:\u0020</string>
    <string name="detail_apply_person">申请人\u0020:\u0020</string>
    <string name="detail_reject_person">退单人\u0020:\u0020</string>
    <string name="detail_report_person">上报人\u0020:\u0020</string>
    <string name="detail_host_person">主办人\u0020:\u0020</string>
    <string name="detail_apply_reason">申请原因\u0020:\u0020</string>
    <string name="detail_apply_person_count">申请人数\u0020:\u0020</string>
    <string name="detail_assist_person">协助人\u0020:\u0020</string>
    <string name="detail_install_person">装表人\u0020:\u0020</string>
    <string name="detail_install_time">装表日期\u0020:\u0020</string>
    <string name="detail_driver">司机\u0020:\u0020</string>
    <string name="detail_tel">联系电话\u0020:\u0020</string>
    <string name="detail_meter_kind">水表种类\u0020:\u0020</string>
    <string name="detail_apply_tel">申请人电话\u0020:\u0020</string>
    <string name="detail_type">类型\u0020:\u0020</string>
    <string name="detail_bar_code">表身码\u0020:\u0020</string>
    <string name="detail_tv_seal_number">钢印号\u0020:\u0020</string>
    <string name="detail_tv_caliber_value">水表口径\u0020:\u0020</string>
    <string name="detail_tv_degree_value">原表行度\u0020:\u0020</string>
    <string name="detail_tv_type_value">表类型\u0020:\u0020</string>
    <string name="detail_tv_last_read">最后抄码\u0020:\u0020</string>
    <string name="detail_tv_new_read">最新抄码\u0020:\u0020</string>
    <string name="detail_tv_coordinate">坐标\u0020:\u0020</string>
    <string name="detail_replace_reason">换表原因\u0020:\u0020</string>
    <string name="detail_split_reason">拆表原因\u0020:\u0020</string>
    <string name="detail_reinstall_reason">复装原因\u0020:\u0020</string>
    <string name="detail_stop_reason">停水原因\u0020:\u0020</string>
    <string name="detail_reuse_reason">复用原因\u0020:\u0020</string>
    <string name="detail_check_reason">验表原因\u0020:\u0020</string>
    <string name="detail_average_water">平均水量\u0020:\u0020</string>
    <string name="detail_handler_time_limit">处理时限\u0020:\u0020</string>
    <string name="text_reject_reason">退单原因\u0020:\u0020</string>
    <string name="text_delay_time">延期时间\u0020:\u0020</string>
    <string name="text_happen_time">发生时间\u0020:\u0020</string>
    <string name="text_delay_reason">延期原因\u0020:\u0020</string>
    <string name="text_hang_up_reason">挂起原因\u0020:\u0020</string>
    <string name="text_recovery_reason">恢复原因\u0020:\u0020</string>
    <string name="text_happen_reason">发生原因\u0020:\u0020</string>
    <string name="text_response_time">反映时间\u0020:\u0020</string>
    <string name="text_resolve_level">处理级别\u0020:\u0020</string>
    <string name="text_resolve_method">处理方式\u0020:\u0020</string>
    <string name="text_response_original">反映来源\u0020:\u0020</string>
    <string name="text_response_area">反映区块\u0020:\u0020</string>
    <string name="text_new_bar_code">新表条形码\u0020:\u0020</string>
    <string name="text_new_seal_number">新表表身码\u0020:\u0020</string>
    <string name="text_seal_number">表身码\u0020:\u0020</string>
    <string name="text_new_meter_reader">新表底码\u0020:\u0020</string>
    <string name="text_new_table_reader">新表读数\u0020:\u0020</string>
    <string name="text_new_meter_caliber">新表口径\u0020:\u0020</string>
    <string name="text_meter_caliber">口径\u0020:\u0020</string>
    <string name="text_new_meter_type">新表类型\u0020:\u0020</string>
    <string name="text_meter_type">表类型\u0020:\u0020</string>
    <string name="text_old_meter_number">旧表底码\u0020:\u0020</string>
    <string name="text_commencement_data">施工日期\u0020:\u0020</string>
    <string name="text_remark">备注\u0020:\u0020</string>
    <string name="text_handle_remark">处理备注\u0020:\u0020</string>
    <string name="text_handle_content">处理内容\u0020:\u0020</string>
    <string name="text_materiel">物料\u0020:\u0020</string>
    <string name="text_handle_type">处理类别\u0020:\u0020</string>
    <string name="text_handle_result">处理结果\u0020:\u0020</string>
    <string name="text_handle_department">处理部门\u0020:\u0020</string>
    <string name="text_meter_valve_type">表管阀分类\u0020:\u0020</string>
    <string name="text_stop_method">停水方式\u0020:\u0020</string>
    <string name="text_stop_type">停用类型\u0020:\u0020</string>
    <string name="text_solution">解决措施\u0020:\u0020</string>
    <string name="text_material_type">材料类型\u0020:\u0020</string>
    <string name="text_material_name">材料名称\u0020:\u0020</string>
    <string name="text_material_standard">材料规格\u0020:\u0020</string>
    <string name="text_material_unit">材料单位\u0020:\u0020</string>
    <string name="text_material_price">单价\u0020:\u0020</string>
    <string name="text_material_number">数量\u0020:\u0020</string>
    <string name="text_accept_person">接单人\u0020:\u0020</string>
    <string name="text_difficult_index">难度系数\u0020:\u0020</string>
    <string name="text_reason">原因\u0020:\u0020</string>
    <string name="text_approve_result">审批结果\u0020:\u0020</string>
    <string name="text_approve_person_number">审批人数\u0020:\u0020</string>
    <string name="un_replace">无法换表</string>
    <string name="text_if_stop_water">是否停水</string>
    <string name="text_if_replace_meter">是否换表</string>
    <string name="text_details">详细信息</string>
    <string name="radio_button_detail">详细</string>
    <string name="radio_button_manager">处理</string>
    <string name="radio_button_multimedia">多媒体</string>
    <string name="title_task_search">工单查询</string>
    <string name="title_task_dispatch">工单派遣</string>
    <string name="title_task_statistics">工单统计</string>
    <string name="title_task_verify">工单审核</string>
    <string name="title_task_approve">工单审批</string>
    <string name="title_report_verify">自开单审核</string>
    <string name="title_task_manager_meter">表务工单</string>
    <string name="title_report">自开单</string>
    <string name="title_temporary">暂存</string>
    <string name="title_transform">转站</string>
    <string name="title_cancel">作废</string>
    <string name="title_task_install">报装工单</string>
    <string name="title_history">历史工单</string>
    <string name="title_hot">热线工单</string>
    <string name="title_inside">內部工单</string>
    <string name="title_notice">停水通知单</string>
    <string name="text_card_number">表卡编号\u0020:\u0020</string>
    <string name="text_costumer_number">用户编号\u0020:\u0020</string>
    <string name="text_contact_tel">联系电话\u0020:\u0020</string>
    <string name="text_gang_yin_hao">钢印号\u0020:\u0020</string>
    <string name="text_describe">描述\u0020:\u0020</string>
    <string name="text_order_type">工单类型\u0020:\u0020</string>
    <string name="text_handle_time">处理时间\u0020:\u0020</string>
    <string name="text_resolve_person">处理人\u0020:\u0020</string>
    <string name="text_replace_type">换表类型\u0020:\u0020</string>
    <string name="text_split_type">拆表类型\u0020:\u0020</string>
    <string name="text_supply_type">供水方式\u0020:\u0020</string>
    <string name="text_volume_id">册号\u0020:\u0020</string>
    <string name="text_volume_index">册内序号\u0020:\u0020</string>
    <string name="text_begin_time">开始时间\u0020:\u0020</string>
    <string name="text_end_time">结束时间\u0020:\u0020</string>
    <string name="text_verify_status">审核状态\u0020:\u0020</string>
    <string name="text_network_not_connect">网络连接异常</string>
    <string name="menu_search">搜索</string>
    <string name="menu_filter_type">工单类型过滤</string>
    <string name="menu_filter_status">处理情况过滤</string>
    <string name="menu_filter">过滤</string>
    <string name="menu_cancel">作废</string>
    <string name="menu_verify">审核</string>
    <string name="menu_dispatch">派遣</string>
    <string name="menu_approve">审批</string>
    <string name="menu_station">转站</string>
    <string name="toast_download_task_success">下载任务成功</string>
    <string name="toast_download_task_fail">下载任务失败</string>
    <string name="toast_search_task_success">查询任务成功</string>
    <string name="toast_search_task_fail">查询任务失败</string>
    <string name="toast_download_dispatch_success">下载派遣任务成功</string>
    <string name="toast_download_dispatch_fail">下载派遣任务失败</string>
    <string name="toast_download_verify_success">下载审核任务成功</string>
    <string name="toast_download_verify_fail">下载审核任务失败</string>
    <string name="toast_download_statistics_success">下载统计数据成功</string>
    <string name="toast_download_statistics_fail">下载统计数据失败</string>
    <string name="dialog_search_now">正在查询</string>
    <string name="create_media_folder_fail">存照片的文件夹创建失败</string>
    <string name="radio_take_picture">拍照</string>
    <string name="radio_album">相册</string>
    <string name="text_sub_type_split">拆表</string>
    <string name="text_sub_type_replace">换表</string>
    <string name="text_sub_type_reinstall">复装</string>
    <string name="text_sub_type_stop">停水</string>
    <string name="text_sub_type_move">迁表</string>
    <string name="text_sub_type_check">验表</string>
    <string name="text_search">查询</string>
</resources>