<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--工单编号-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_work_id" />

            <TextView
                android:id="@+id/tv_work_id"
                style="@style/text_right_margin_style" />

        </LinearLayout>

        <!--热线编号-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_hot_work_id" />

            <TextView
                android:id="@+id/tv_hot_work_id"
                style="@style/text_right_margin_style" />

        </LinearLayout>

        <!--用户编号-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_costumer_number" />

            <TextView
                android:id="@+id/tv_card_id"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--站点-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_station" />

            <TextView
                android:id="@+id/tv_station"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反映人-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_person" />

            <TextView
                android:id="@+id/tv_response_person"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--联系电话-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/detail_tel" />

            <TextView
                android:id="@+id/tv_telephone"
                style="@style/text_right_no_margin_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/ib_telephone"
                style="@style/text_right_tel_style" />
        </LinearLayout>

        <!--主办人-->
        <LinearLayout
            android:id="@+id/ll_host_person"
            style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/detail_host_person" />

            <TextView
                android:id="@+id/tv_host_person"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--协助人-->
        <LinearLayout
            android:id="@+id/ll_assist_person"
            style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/detail_assist_person" />

            <TextView
                android:id="@+id/tv_assist_person"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--司机-->
        <LinearLayout
            android:id="@+id/ll_driver"
            style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/detail_driver" />

            <TextView
                android:id="@+id/tv_driver"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反应类型-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_type" />

            <TextView
                android:id="@+id/tv_response_type"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反应内容-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_content" />

            <TextView
                android:id="@+id/tv_response_content"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反映时间-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_time" />

            <TextView
                android:id="@+id/tv_response_time"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--发生地址-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_happen_address" />

            <TextView
                android:id="@+id/tv_address"
                style="@style/text_right_no_margin_style" />

            <ImageButton
                android:id="@+id/ib_map"
                style="@style/text_right_map_style" />
        </LinearLayout>

        <!--处理级别-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_resolve_level" />

            <TextView
                android:id="@+id/tv_resolve_level"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反映来源-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_original" />

            <TextView
                android:id="@+id/tv_response_original"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--反映区块-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_response_area" />

            <TextView
                android:id="@+id/tv_response_area"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--受理备注-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_accept_remark" />

            <TextView
                android:id="@+id/tv_remark"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--工单状态-->
        <LinearLayout style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_task_status" />

            <TextView
                android:id="@+id/tv_task_status"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--派单时间-->
        <LinearLayout
            android:id="@+id/ll_register_time"
            style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/text_register_time" />

            <TextView
                android:id="@+id/tv_register_time"
                style="@style/text_right_margin_style" />
        </LinearLayout>

        <!--处理时限-->
        <LinearLayout
            android:id="@+id/ll_end_time"
            style="@style/linear_layout_item">

            <TextView
                style="@style/text_left_style"
                android:text="@string/detail_handler_time_limit" />

            <TextView
                android:id="@+id/tv_end_time"
                style="@style/text_right_margin_style" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>